The first commit

--- a/dragon.html
+++ b/dragon.html
@@ -9,13 +9,13 @@
 <body>
     <header>
         <h1>This is Dragon's World!</h1>
-        <img src="/html-game/images/dragon-bg.jfif" alt="Dragon's World" width="500">
+        <img src="/images/dragon-bg.jfif" alt="Dragon's World" width="500">
     </header>
         
     <div>
         <h3>Which planet do you want to invade?</h3>
-        <a href="venus.html"><img src="/html-game/images/venus.jpg" width="75" alt="Planet Venus"></a>
-        <a href="jupiter.html"><img src="/html-game/images/jupiter.JPG" width="75" alt="planet Jupiter"></a>
+        <a href="venus.html"><img src="/images/venus.jpg" width="75" alt="Planet Venus"></a>
+        <a href="jupiter.html"><img src="/images/jupiter.JPG" width="75" alt="planet Jupiter"></a>
     </div>
 </body>
 </html>
