--- a/home.html
+++ b/home.html
@@ -13,9 +13,9 @@
       
     <div id="no1">
         <h3>Choose Your Character!</h3>
-        <a href="ninja.html"><img src="/html-game/images/ninja.JPG" width="75" alt="ninja"></a>
-        <a href="mario.html"><img src="/html-game/images/mario.JPG" width="75" alt="mario"></a>
-        <a href="dragon.html"><img src="/html-game/images/dragon.JPG" width="75" alt="dragon"></a>
+        <a href="ninja.html"><img src="/images/ninja.JPG" width="75" alt="ninja"></a>
+        <a href="mario.html"><img src="/images/mario.JPG" width="75" alt="mario"></a>
+        <a href="dragon.html"><img src="/images/dragon.JPG" width="75" alt="dragon"></a>
     </div>
     
     <br><br>
