--- a/lose.html
+++ b/lose.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Bad choice! You lost the fight!</h1>
     <p> Your weapon didn't withstand the conditions of the planet.</p>
-    <img src="/html-game/images/defeat.jpg" alt="Defeat" width="400">
+    <img src="/images/defeat.jpg" alt="Defeat" width="400">
 </body>
 </html>
