--- a/venus.html
+++ b/venus.html
@@ -13,8 +13,8 @@
         
     <div>
         <h3>Which weapon would you choose?</h3>
-        <a href="win.html"><img src="/html-game/images/tungsten-sword.JPG" width="75" alt="Tungsten Sword"></a>
-        <a href="lose.html"><img src="/html-game/images/aluminium-sword.JPG" width="62" alt="Aluminium Sword"></a>
+        <a href="win.html"><img src="/images/tungsten-sword.JPG" width="75" alt="Tungsten Sword"></a>
+        <a href="lose.html"><img src="/images/aluminium-sword.JPG" width="62" alt="Aluminium Sword"></a>
     </div>
 </body>
 </html>
