--- a/win.html
+++ b/win.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Good choice! You won the fight!</h1>
     <p> Your weapon suited the conditions of the planet.</p>
-    <img src="/html-game/images/celebration.jfif" alt="Celebration" width="400">
+    <img src="/images/celebration.jfif" alt="Celebration" width="400">
 </body>
 </html>
