Some texts were revised

--- a/win.html
+++ b/win.html
@@ -7,8 +7,8 @@
     <title>Win Fight</title>
 </head>
 <body>
-    <h1>Good choice! You won the fight!</h1>
-    <p> Your weapon suited the conditions of the planet.</p>
+    <h1>Congratulation! You won the battle!</h1>
+    <p> Good choice! Your weapon suited the conditions of the planet.</p>
     <img src="/images/celebration.jfif" alt="Celebration" width="400">
 </body>
 </html>
