--- a/dragon.html
+++ b/dragon.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>This is Dragon's World!</h1>
+        <h1>This is Dragon's Kingdom!</h1>
         <img src="/images/dragon-bg.jfif" alt="Dragon's World" width="500">
     </header>
         
