--- a/lose.html
+++ b/lose.html
@@ -7,8 +7,8 @@
     <title>Lose Fight</title>
 </head>
 <body>
-    <h1>Bad choice! You lost the fight!</h1>
-    <p> Your weapon didn't withstand the conditions of the planet.</p>
+    <h1>Oh dear! You lost the battle!</h1>
+    <p> Bad choice! Your weapon didn't withstand the conditions of the planet.</p>
     <img src="/images/defeat.jpg" alt="Defeat" width="400">
 </body>
 </html>
