--- a/mario.html
+++ b/mario.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>This is Mario's World!</h1>
+        <h1>This is Mario's Kingdom!</h1>
         <img src="/images/mario-bg.jfif" alt="Mario's World" width="500">
     </header>
         
