--- a/ninja.html
+++ b/ninja.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>This is Ninja's World!</h1>
+        <h1>This is Ninja's Kingdom!</h1>
         <img src="/images/ninja-bg.jfif" alt="Ninja's World" width="500">
     </header>
         
