--- a/jupiter.html
+++ b/jupiter.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jupiter Invasion</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
-        <h1>Let's Fight to Seize Jupiter!</h1>
+        <h1>Fight to Seize Jupiter!</h1>
     </header>
         
-    <div>
+    <div id="dno1">
         <h3>Which weapon would you choose?</h3>
-        <a href="lose.html"><img src="/images/tungsten-sword.JPG" width="75" alt="Tungsten Sword"></a>
-        <a href="win.html"><img src="/images/aluminium-sword.JPG" width="62" alt="Aluminium Sword"></a>
+        <section id="sec1">
+            <a href="lose.html"><img src="/images/tungsten-sword.JPG" width="75" alt="Tungsten Sword"></a>
+            <a href="win.html"><img src="/images/aluminium-sword.JPG" width="62" alt="Aluminium Sword"></a>
+        </section>
     </div>
+        
 </body>
 </html>
