--- a/lose.html
+++ b/lose.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lose Fight</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Oh dear! You lost the battle!</h1>
-    <p> Bad choice! Your weapon didn't withstand the conditions of the planet.</p>
-    <img src="/images/defeat.jpg" alt="Defeat" width="400">
+    <header>
+        <h1>Oh dear! You lost the battle!</h1>
+        <img src="/images/defeat.jpg" alt="Defeat" width="400">
+        <p> Bad choice! Your weapon didn't withstand the conditions of the planet.</p>
+    </header>
+    
 </body>
 </html>
