--- a/mario.html
+++ b/mario.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mario</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
@@ -12,10 +13,13 @@
         <img src="/images/mario-bg.jfif" alt="Mario's World" width="500">
     </header>
         
-    <div>
+    <div id="dno1">
         <h3>Which planet do you want to invade?</h3>
-        <a href="venus.html"><img src="/images/venus.jpg" width="75" alt="Planet Venus"></a>
-        <a href="jupiter.html"><img src="/images/jupiter.JPG" width="75" alt="planet Jupiter"></a> 
+        <section id="sec1">
+            <a href="venus.html"><img src="/images/venus.jpg" width="75" alt="Planet Venus"></a>
+            <a href="jupiter.html"><img src="/images/jupiter.JPG" width="75" alt="planet Jupiter"></a>
+        </section>
+         
     </div> 
 </body>
 </html>
