--- a/win.html
+++ b/win.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Win Fight</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Congratulation! You won the battle!</h1>
-    <p> Good choice! Your weapon suited the conditions of the planet.</p>
-    <img src="/images/celebration.jfif" alt="Celebration" width="400">
+    <header>
+        <h1>Congratulations! You won the battle!</h1>
+        <img src="/images/celebration.jfif" alt="Celebration" width="400">
+        <p> Good choice! Your weapon suited the conditions of the planet.</p>
+    </header>
+    
 </body>
 </html>
