starting page and restart button and some css

--- a/ninja.html
+++ b/ninja.html
@@ -21,5 +21,10 @@
         </section>
     </div>
 
+    <footer>
+        <p id="footer">This game is a part of a coursework and has not been created for any commercial purposes.<br> The copyrights of the images used in this work remains with original owners.    
+        </p>
+    </footer>
+    
 </body>
 </html>
