--- a/welcome.html
+++ b/welcome.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Home</title>
+    <title>Welcome</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body id="welcome">
     <header>
-        <h1>Planets Attack</h1>
+        <h1>Welcome To <br> The Planets Attack</h1>
     </header>
-      
+
     <div id="dno1">
-        <h3>Choose Your Character!</h3>
+        <br><br>
+        <h3>Are you ready?</h3>
         <section id="sec1">
-            <a href="ninja.html"><img src="/images/ninja.JPG" width="75" alt="ninja"></a>
-            <a href="mario.html"><img src="/images/mario.JPG" width="75" alt="mario"></a>
-            <a href="dragon.html"><img src="/images/dragon.JPG" width="75" alt="dragon"></a>
+            <a class="button" href="start.html">Start</a>
         </section>
     </div>
-    
+
     <div id="dno2">
         <p><em>Hints:</em></p>
         <section id="sec2">
@@ -32,5 +31,11 @@
             </ol>
         </section>
     </div>
+
+    <footer>
+        <p id="footer">This game is a part of a coursework and has not been created for any commercial purposes.<br> The copyrights of the images used in this work remains with original owners.    
+        </p>
+    </footer>
+
 </body>
 </html>
