--- a/dragon.html
+++ b/dragon.html
@@ -20,5 +20,11 @@
             <a href="jupiter.html"><img src="/images/jupiter.JPG" width="75" alt="planet Jupiter"></a>
         </section>
     </div>
+
+    <footer>
+        <p id="footer">This game is a part of a coursework and has not been created for any commercial purposes.<br> The copyrights of the images used in this work remains with original owners.    
+        </p>
+    </footer>
+    
 </body>
 </html>
