--- a/mario.html
+++ b/mario.html
@@ -19,7 +19,11 @@
             <a href="venus.html"><img src="/images/venus.jpg" width="75" alt="Planet Venus"></a>
             <a href="jupiter.html"><img src="/images/jupiter.JPG" width="75" alt="planet Jupiter"></a>
         </section>
-         
     </div> 
+
+    <footer>
+        <p id="footer">This game is a part of a coursework and has not been created for any commercial purposes.<br> The copyrights of the images used in this work remains with original owners.    
+        </p>
+    </footer>
 </body>
 </html>
